# vortex-gym

./: README.md  pyproject.toml
assets/: config_withoutgraphics.vxc
assets/Kinova Gen2 Unjamming/Kinova Gen 2/: kinova_gen2.vxassembly
assets/Kinova Gen2 Unjamming/Kinova Gen 2/Graphic/: j2s7s300_arm_half_2.vxgraphicgallery  j2s7s300_base.vxgraphicgallery  j2s7s300_finger_proximal.vxgraphicgallery  j2s7s300_forearm.vxgraphicgallery  j2s7s300_wrist_spherical_2.vxgraphicgallery
assets/Kinova Gen2 Unjamming/Peg/: Square Peg.vxassembly
assets/Kinova Gen2 Unjamming/Scenes/: kinova_peg-in-hole.vxscene
assets/Kinova Gen2 Unjamming/Socket/Graphic/: Socket.ipt  socket_half.vxgraphicgallery
assets/Kinova Gen2 Unjamming/_old/: gen2.vxscene  j2s7s300.vxassembly  j2s7s300_finger_distal (1).vxgraphicgallery  j2s7s300_finger_distal (2).vxgraphicgallery  j2s7s300_finger_proximal (1).vxgraphicgallery  j2s7s300_finger_proximal (2).vxgraphicgallery  j2s7s300_shoulder.vxgraphicgallery  j2s7s300_test.vxassembly  j2s7s300_with_test_peg.vxassembly  j2s7s300_with_test_peg_four-blocks-peg.vxgraphicgallery  j2s7s300_without_test_peg.vxassembly  socket.vxassembly
tests/: robotics_toolbox_examples.py  robotics_toolbox_test.py  test_InsertKinovaV1.py  test_ReachKinovaV1.py  test_VortexEnv.py  test_func.py  test_kinova_gen_2.py  test_pyvortex.py
vortex_gym/: VortexEnv.py  __init__.py  klampt_test.py  peg_task.py  robotics_toolbox_test.py  temp.py  vortex_env.py
vortex_gym/assets/: config.vxc  config_withgraphics.vxc
vortex_gym/assets/Kinova Gen2 Unjamming/: j2s7s300.urdf  j2s7s300_ee.urdf
vortex_gym/assets/Kinova Gen2 Unjamming/Kinova Gen 2/: kinova_gen2.vxassembly
vortex_gym/assets/Kinova Gen2 Unjamming/Peg/: Square Peg.vxassembly
vortex_gym/assets/Kinova Gen2 Unjamming/Peg/Graphics/: square-peg.vxgraphicgallery
vortex_gym/assets/Kinova Gen2 Unjamming/Scenes/: kinova_peg-in-hole - Copy.vxscene  kinova_peg-in-hole.vxscene  kinova_peg-in-hole_eval.vxscene
vortex_gym/assets/Kinova Gen2 Unjamming/Socket/: Socket.vxassembly  Socket_half.vxassembly
vortex_gym/assets/Kinova Gen2 Unjamming/Table/: Table.vxassembly
vortex_gym/assets/Kinova Gen2 Unjamming/_old/: four-blocks.ipt  j2s7s300_arm_half_1.vxgraphicgallery  j2s7s300_finger_distal.vxgraphicgallery  j2s7s300_with_test_peg_four-blocks.vxgraphicgallery  j2s7s300_wrist_spherical_1.vxgraphicgallery  kinova_gen2_sq_peg3dof.vxscene  square-socket.vxgraphicgallery
vortex_gym/envs/: Insert_Kinova_v1.py  Reach_Kinova_v1.py  __init__.py
vortex_gym/robot/: KinovaGen2.py  kinova_gen_2.py  robot_base.py
vortex_gym/robot/cfg/: KinovaGen2.yaml
(+4 files in other folders)
