[tool.poetry]
name = "vortex-gym"
version = "0.1.0"
description = ""
authors = ["Charles <charles.sirois2@mail.mcgill.ca>"]
readme = "README.md"
include = [
    { path = "vortex_gym/assets/*", format = "sdist" },
]

[tool.poetry.dependencies]
python = "~3.8"
pyvortex = {path = "../pyvortex", develop = true}
numpy = "1.24.3"
gymnasium = "^0.29.1"
pydantic = "2.5.3"
pydantic-settings = "^2.1.0"
pandas = "2.0.3"
omegaconf = "^2.3.0"
matplotlib = "3.7.4"
python-json-logger = "^2.0.7"
klampt = "0.9"
pyqt5 = "5.15.2"
pyopengl = "^3.1.7"
roboticstoolbox-python = "^1.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# MARK: Ruff
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

# Python version
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use single quotes for strings.
quote-style = "single"

# Indent with spaces, rather than tabs.
indent-style = "space"

# Respect magic trailing commas.
skip-magic-trailing-comma = false

# Automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
docstring-code-line-length = "dynamic"

# MARK: Pytest
[tool.pytest]
[tool.pytest.ini_options]
addopts = [
    # "--show-capture",
    "--import-mode=importlib",
    # "-n 1",
    "-p no:faulthandler",
    ]